# BRAG

./: .gitignore  BENCHMARKS.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PR-DRAFT-rust-rgb.md  README.md  export.avif  justfile
.zenbench/baselines/: pre-update.json
benches/: compositing.rs  pipeline.rs
brag-art/: Cargo.toml
brag-art/src/: lib.rs  neon.rs  tests.rs  wasm.rs
docs/: index.html
examples/: jpeg_quality.rs  prepare_test_jpeg.rs  transcode_rst.rs
src/: lib.rs
src/composite/: mod.rs  scalar.rs  tests.rs  x86.rs
src/swizzle/: mod.rs  neon.rs  scalar.rs  tests.rs  wasm.rs  x86.rs
