[package]
name = "brag"
version = "0.1.0"
edition = "2024"
authors = ["Lilith River <lilith@imazen.io>", "The BRAG Standards Consortium"]
description = "Reference implementation of the BRAG (Blue-Red-Alpha-Green) pixel format — the perceptually optimal, compositing-aware channel ordering backed by vision science and one Zilog processor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/brag"
keywords = ["pixel", "format", "swizzle", "image", "brag"]
categories = ["graphics", "multimedia::images"]
readme = "README.md"
rust-version = "1.85"

[dependencies]
# Path dep for local dev; switch to version = "0.2.6" before publishing
garb = { path = "../../garb", optional = true }
archmage = { version = "0.9.16", features = ["macros"], optional = true }

[dev-dependencies]
archmage = { version = "0.9.16", features = ["macros", "testable_dispatch"] }
zenbench = "0.1.2"
sw-composite = "0.7.16"
alpha-blend = "0.1.2"
tiny-skia = "0.12.0"
zenpng = { path = "../zenpng" }
zenjpeg = { path = "../zenjpeg/zenjpeg", features = ["decoder", "parallel"] }
zenresize = { path = "../zenresize" }
imgref = "1"
rgb = "0.8"
enough = "0.4.3"
zune-png = "0.5.2"
zune-jpeg = "0.5.15"
zune-core = "0.5"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
mozjpeg = "0.10.13"
jpeg-encoder = "0.7.0"
butteraugli = { path = "../../butteraugli/butteraugli" }
zenblend = { path = "../zenblend" }

[[example]]
name = "jpeg_quality"
required-features = ["composite", "swizzle"]

[[bench]]
name = "compositing"
harness = false
required-features = ["composite"]

[[bench]]
name = "pipeline"
harness = false
required-features = ["composite", "swizzle"]

[features]
default = []
garb = ["dep:garb"]
composite = ["dep:archmage"]
swizzle = ["dep:archmage"]
