[workspace]
members = [".", "brag-art"]

[package]
name = "brag"
version = "0.1.0"
edition = "2024"
authors = ["Lilith River <lilith@imazen.io>", "The BRAG Standards Consortium"]
description = "Reference implementation of the BRAG (Blue-Red-Alpha-Green) pixel format — the perceptually optimal, compositing-aware channel ordering backed by vision science and one Zilog processor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/imazen/brag"
keywords = ["pixel", "format", "swizzle", "image", "brag"]
categories = ["graphics", "multimedia::images"]
readme = "README.md"
rust-version = "1.85"
exclude = [
    "CLAUDE.md",
    "CONTEXT-HANDOFF.md",
    "FEEDBACK.md",
    ".claude/",
    ".superwork/",
    ".zenbench/",
    "copter-report/",
    ".github/",
    "Cross.toml",
    "justfile",
    "Cargo.toml.original.txt",
    "fuzz/",
]

[dependencies]
# Path dep for local dev; switch to version = "0.2.6" before publishing
garb = { optional = true , git = "https://github.com/imazen/garb" }
archmage = { version = "0.9.16", features = ["macros"], optional = true }
bytemuck = { version = "1.25.0", features = ["derive"] }

[dev-dependencies]
archmage = { version = "0.9.16", features = ["macros", "testable_dispatch"] }
brag-art = { path = "brag-art" , version = "0.1.0" }
zenbench = "0.1.2"
sw-composite = "0.7.16"
alpha-blend = "0.1.2"
tiny-skia = "0.12.0"
zenpng = { version = "0.1.2" , git = "https://github.com/imazen/zenpng" }
zenjpeg = { features = ["decoder", "parallel"] , version = "0.8.2" , git = "https://github.com/imazen/zenjpeg" }
zenresize = { version = "0.2.0" , git = "https://github.com/imazen/zenresize" }
imgref = "1"
rgb = "0.8"
enough = "0.4.3"
zune-png = "0.5.2"
zune-jpeg = "0.5.15"
zune-core = "0.5"
image = { version = "0.25.10", default-features = false, features = ["png", "jpeg"] }
mozjpeg = "0.10.13"
jpeg-encoder = "0.7.0"
butteraugli = { git = "https://github.com/imazen/butteraugli" }
zenblend = { version = "0.1.2" , git = "https://github.com/imazen/zenblend" }
pic-scale-safe = "0.1.10"

[[example]]
name = "jpeg_quality"
required-features = ["swizzle"]

[[bench]]
name = "compositing"
harness = false

[[bench]]
name = "pipeline"
harness = false
required-features = ["swizzle"]

[features]
default = []
garb = ["dep:garb"]
swizzle = ["dep:archmage"]
